--- a/page2.html
+++ b/page2.html
@@ -50,14 +50,14 @@
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header2-1" aria-expanded="false">Home</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">About us</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header2-1" aria-expanded="false">Home</a><a class="text-white dropdown-item display-4" href="page6.html#team1-1e" aria-expanded="false">About us</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">responsive site templates</a></section><section class="mbr-section form1 cid-rkpBmwAOqe" id="form1-d">
+<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="mbr-section form1 cid-rkpBmwAOqe" id="form1-d">
 
     
 
@@ -76,7 +76,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="OSrn78Ek4PSAOpwJEmJBPCHvHkf/UcTMtW60htlr8uC4W3yUuoMMpmJE1EE1m3a3fnYeSrIbYmsV7YjJ73Cfauyt7Gq++/4H9i+jey2p83HqbTFS0TG0imWCcV5agFBh">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ei26fNvwzPVnr+sjcdu7Omx6otwONj5Z0YNO44gUFhn9K22eLHrwNSMb3oiMitkor72MzcIevj5Rcc0k2cy7f9jFe+/EFIPgbOumW+66E0Qbb+t0AvPGhp+lWYXsXWIX">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
