--- a/page3.html
+++ b/page3.html
@@ -51,14 +51,14 @@
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header2-1" aria-expanded="false">Home</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">About us</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header2-1" aria-expanded="false">Home</a><a class="text-white dropdown-item display-4" href="page6.html#team1-1e" aria-expanded="false">About us</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">free simple website templates</a></section><section class="carousel slide cid-rkv7TliBH9" data-interval="false" id="slider1-14">
+<section class="engine"><a href="https://mobirise.info/o">portfolio site templates</a></section><section class="carousel slide cid-rkv7TliBH9" data-interval="false" id="slider1-14">
 
     
 
