--- a/page4.html
+++ b/page4.html
@@ -50,14 +50,14 @@
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header2-1" aria-expanded="false">Home</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">About us</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header2-1" aria-expanded="false">Home</a><a class="text-white dropdown-item display-4" href="page6.html#team1-1e" aria-expanded="false">About us</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/q">free responsive site templates</a></section><section once="" class="cid-rkpByBZb89" id="footer6-16">
+<section class="engine"><a href="https://mobirise.info/f">easy website creator</a></section><section once="" class="cid-rkpByBZb89" id="footer6-16">
 
     
 
@@ -85,14 +85,14 @@
             <div class="mbr-white col-lg-8 col-md-7 content-container">
                 <h1 class="mbr-section-title mbr-bold pb-3 mbr-fonts-style display-1">SUGGESTION FORM</h1>
                 <p class="mbr-text pb-3 mbr-fonts-style display-5">
-                    We give you our deepest gratitude for you recent visit on our web page. We want to provide you with the best service possible and that is why feel free to leave any comments, suggestions and requests. We would make sure to take all of your reviews into consideration. Our team would be more than happy to help. Thank you!
+                    We give you our deepest gratitude for your recent visit on our web page. We want to provide you with the best service possible and that is why feel free to leave any comments, suggestions and requests. We would make sure to take all of your reviews into consideration. Our team would be more than happy to help. Thank you!
                 </p>
             </div>
             <div class="col-lg-4 col-md-5">
                 <div class="form-container">
                     <div class="media-container-column" data-form-type="formoid">
                         <!---Formbuilder Form--->
-                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="v0vohdZ30VrMKuDNwLc8JLoizrOyr+888J5wtw3z45xJ2DxjF/Ab2WX6fI2m02/PklMSTDHzeKbVzJtswYNFIg6ct3F460O1FllFIEvP3xF18h5hNKOreTl323/TItTk">
+                        <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="hohpj22fCbzOQ4tYCTcftwnmqOkiqG4SP26qPFyVEUay3d2NNF6dSEm/kom9naByNr7ygc8e+Rz1dnWtA3nn9B2p/Ndvog7vUQC7NAt+lBHIB4f5KUzzqdBQYApmI56c">
                             <div class="row">
                                 <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                                 <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
