--- a/page6.html
+++ b/page6.html
@@ -51,14 +51,14 @@
                     <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.com" data-toggle="dropdown-submenu" aria-expanded="true">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Services
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header2-1" aria-expanded="false">Home</a><a class="text-white dropdown-item display-4" href="#top" aria-expanded="false">About us</a></div>
+                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="index.html#header2-1" aria-expanded="false">Home</a><a class="text-white dropdown-item display-4" href="page6.html#team1-1e" aria-expanded="false">About us</a></div>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section once="" class="cid-rkpoutT1OB" id="footer7-1d">
+<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section once="" class="cid-rkpoutT1OB" id="footer7-1d">
 
     
 
