create github pages

--- a/page2.html
+++ b/page2.html
@@ -57,7 +57,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/e">make your own site</a></section><section class="mbr-section form1 cid-rkpBmwAOqe" id="form1-d">
+<section class="engine"><a href="https://mobirise.info/w">free html5 templates</a></section><section class="mbr-section form1 cid-rkpBmwAOqe" id="form1-d">
 
     
 
@@ -76,7 +76,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ei26fNvwzPVnr+sjcdu7Omx6otwONj5Z0YNO44gUFhn9K22eLHrwNSMb3oiMitkor72MzcIevj5Rcc0k2cy7f9jFe+/EFIPgbOumW+66E0Qbb+t0AvPGhp+lWYXsXWIX">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="GfiKwInAygPkG0a0r0hxQBCWXPnkhMaOVprXTRd2owryi6GvrvK2Cv1vNArFj5Xk4s1ZlGjpO3tTxVAi76bTeARmr2Sdk5E7YHjbUYUOYVOrRXK59uvsV0tm1GjAmp7F">
                     <div class="row row-sm-offset">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
