--- a/page6.html
+++ b/page6.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/g">build a website for free</a></section><section once="" class="cid-rkpoutT1OB" id="footer7-1d">
+<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section once="" class="cid-rkpoutT1OB" id="footer7-1d">
 
     
 
