--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">develop your own website</a></section><section once="" class="cid-rkpoutT1OB" id="footer7-1g">
+<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section once="" class="cid-rkpoutT1OB" id="footer7-1g">
 
     
 
