create github pages

--- a/page1.html
+++ b/page1.html
@@ -58,7 +58,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/b">create a website</a></section><section class="features3 cid-rkN3SF290x" id="features3-1l">
+<section class="engine"><a href="https://mobirise.info/a">online website builder</a></section><section class="features3 cid-rkN3SF290x" id="features3-1l">
 
     
 
