--- a/page7.html
+++ b/page7.html
@@ -59,7 +59,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section once="" class="cid-rkpoutT1OB" id="footer7-1g">
+<section class="engine"><a href="https://mobirise.info/g">build a site</a></section><section once="" class="cid-rkpoutT1OB" id="footer7-1g">
 
     
 
